<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="se.irl.pixicle.ProgressFragment"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material"
        android:overScrollMode="ifContentScrolls"
        >

        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_twinkles"
                android:labelFor="@+id/twinkle_count"/>

            <EditText
                android:id="@+id/twinkle_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="3"
                android:text="10"
                android:imeOptions="actionDone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:labelFor="@+id/twinkle_duration"/>

            <EditText
                android:id="@+id/twinkle_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="5"
                android:text="3000"
                android:imeOptions="actionDone"
                />

            <CheckBox
                android:id="@+id/twinkle_flickering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/flickering"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twinkle_color"/>

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/twinkle_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/twinkle_value_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/twinkle_saturation_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>