<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="se.irl.pixicle.GradientFragment"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material"
        android:overScrollMode="ifContentScrolls">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transition_style_label"
                android:labelFor="@+id/transition_style"
                />

            <Spinner
                android:id="@+id/transition_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_color"/>

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/gradient_from_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/gradient_from_value_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/gradient_from_saturation_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_color"/>

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/gradient_to_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/gradient_to_value_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/gradient_to_saturation_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
