<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="se.irl.pixicle.ProgressFragment"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material"
        android:overScrollMode="ifContentScrolls">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completion_percentage"
                android:labelFor="@+id/progress_percentage"
                />

            <EditText
                android:id="@+id/progress_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="50.0"
                android:imeOptions="actionDone"
                android:minEms="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_color"/>

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/progress_from_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/progress_from_value_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/progress_from_saturation_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_color"/>

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/progress_to_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/progress_to_value_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/progress_to_saturation_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
